[metadata]
name = dxw
version = 0.0.2
url = https://github.com/kwinkunks/dxw
author = Matt Hall
author_email = matt@agilescientific.com
description = Simple dynamic thing warping (time, space, depth, whatever)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
# Use this for flat-layout:
packages = find:
# Use *nothing* for src-layout.
python_requires = >= 3.6
install_requires =
    numpy

# Options for pip, like pip install .[dev]
[options.extras_requires]
test = pytest; pytest-cov
dev = build; twine; pytest; pytest-cov

# Options for your various tools, eg pytest, 
[tool:pytest]
addopts = --doctest-modules
          --cov

# Better than putting in .coveragerc
[coverage:run]
omit = *__init__.py
